# visual-browseruse

./: .env.example  .gitignore  amorino.md  compile_guides.py  data.json  facturar.py  fiscal.json.example  invoice.py  main.py  package-lock.json  package.json  pyproject.toml  refine.py  rfc.txt  sanpablo.md  webapp.py  webpack.config.js
cfdi/: guards.py  guides.py  matcher.py  preflight.py  router.py  runner.py  trace.py
docs/plans/: 2026-06-12-001-feat-agent-friendly-invoice-guides-plan.md
examples/: ticket.sample.json
extensions/page-border/: border.css  manifest.json
extensions/userscript/: manifest.json
guides/: amorino-gelato.md  bodegas-alianza.md  farmacia-san-pablo.md  tiendas-extra.md
guides/_drafts/: amorino-gelato.md  farmacia-san-pablo.md
js/: browseruse.user.js
rfcs/: SOLA851225MZ2.json  UAP370423PP3.json
tests/: test_compile_guides.py  test_extension.py  test_generic.py  test_guard_browser.py  test_guards.py  test_guides.py  test_matcher.py  test_notify.py  test_preflight.py  test_prompt.py  test_router.py  test_trace.py  test_webapp.py
tests/fixtures/: golden_prompt.txt  portal.html
tests/fixtures/guides/: los-pollos-hermanos.md  madrigal-electromotive.md
tests/fixtures/guides_dup/: pollos-clone.md  vamonos-pest.md
