[project]
name = "visual-browseruse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use==0.13.1",
    "flask>=3.1.3",
    "pyyaml>=6.0.3",
    "tldextract>=5.3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
